# PyDirectX

./: CMakeLists.txt  README.md  test.py
bridge/: bridge.cxx
lib/pycxx-7.0.3/: build-all.cmd
src/: Render.cpp  Render.h
